# O-TUNE

./: .gitignore  DEV_SETUP.md  README.md  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/scripts/: run_dev_pipeline.py
api/scripts/fixtures/: seed_corpus.txt
api/src/otune/: config.py  db.py  main.py  models.py  schemas.py
api/src/otune/routers/: projects.py  stripe_webhook.py
api/src/otune/services/: benchmark.py  billing.py  dataset.py  delivery.py  evaluate.py  events.py  local_inference.py  local_training.py  patch.py  pipeline.py  storage.py  training.py
web/: .env.local.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web/docs/: auth-setup.md
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: about.module.css  page.tsx
web/src/app/contact/: contact.module.css  page.tsx
web/src/app/dashboard/: dashboard.module.css  page.tsx
web/src/app/docs/: docs.module.css  page.tsx
web/src/app/login/: LoginPanel.tsx  login.module.css  page.tsx
web/src/app/pricing/: page.tsx
web/src/app/privacy/: page.tsx
web/src/components/: AppShell.module.css  AppShell.tsx  CTA.module.css  CTA.tsx  FAQ.module.css  FAQ.tsx  Features.module.css  Features.tsx  Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  Nav.module.css  Nav.tsx  PageHeader.module.css  PageHeader.tsx  Pipeline.module.css  Pipeline.tsx  Pricing.module.css  Pricing.tsx  Security.module.css  Security.tsx
web/src/lib/: api.ts  auth.ts
(+5 files in other folders)
