[project]
name = "otune-api"
version = "0.1.0"
description = "O'TUNE backend — orchestrates benchmark, dataset, training, eval, delivery."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.31.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "alembic==1.13.3",
  "anthropic==0.39.0",
  "openai==1.51.2",
  "stripe==11.1.1",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "python-multipart==0.0.12",
  "boto3==1.35.36",
  "runpod==1.7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
